[package]
name = "vban_autogain"
version = "0.2.2"
authors = ["c000 <c000@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.*"
clap = "2.33.*"
shell-words = "1.*"

[dependencies.tokio]
version = "0.3.*"
features = ["net", "io-std", "io-util", "rt", "sync"]
